Added header for the index.html

--- a/Group-A/index.html
+++ b/Group-A/index.html
@@ -1,12 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./index.css" />
     <title>Git-Group-A</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <header>
+      <div class="container">
+
+        <div class="sale-ad">
+            <span>Free Courses. Sale Ends Soon, Get It Now</span>
+            <a href="#">
+              <img src="./assets/icons/header-arrow.svg" alt="arrow icon" />
+            </a>
+          </div>
+
+        <div class="header-container">
+          <div class="left-side">
+            <div class="logo">
+              <a href="#">
+                <img src="./assets/icons/logo.svg" alt="logo" />
+              </a>
+            </div>
+
+            <nav>
+                <ul>
+                    <li class="active">
+                        <a href="./index.html">
+                            <span>Home</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <span>Courses</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <span>About Us</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <span>Pricing</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <span>Contact</span>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+
+          </div>
+          <div class="profile">
+            <button>Sign Up</button>
+            <button>Login</button>
+          </div>
+        </div>
+
+      </div>
+    </header>
+  </body>
 </html>
