--- a/Group-A/index.html
+++ b/Group-A/index.html
@@ -29,22 +29,21 @@
     <title>Git-Group-A</title>
   </head>
   <body class="font-vietnam h-[5000px]">
-
-    <header>
+    <div
+    class="bg-[#ff9500] mt-[20px] p-[14px] flex gap-[23px] justify-center rounded-[8px] w-[calc(100%_-_60px)] mx-auto"
+  >
+    <span class="text-[#fff] text-[18px] font-normal"
+      >Free Courses. Sale Ends Soon, Get It Now</span
+    >
+    <a href="#">
+      <img src="./assets/icons/header-arrow.svg" alt="arrow icon" />
+    </a>
+  </div>
+    <header class="sticky top-0">
       <div class="w-[calc(100%_-_60px)] mx-auto">
-        <div
-          class="bg-[#ff9500] mt-[20px] p-[14px] flex gap-[23px] justify-center rounded-[8px]"
-        >
-          <span class="text-[#fff] text-[18px] font-normal"
-            >Free Courses. Sale Ends Soon, Get It Now</span
-          >
-          <a href="#">
-            <img src="./assets/icons/header-arrow.svg" alt="arrow icon" />
-          </a>
-        </div>
 
         <div class="flex justify-between p-[20px_132px_24px] items-center">
-          <div class="flex gap-[50px] sticky">
+          <div class="flex gap-[50px]">
             <div
               class="w-[47px] h-[47px] rounded-[8px] bg-[#ff9500] flex items-center justify-center mt-[4px]">
               <a href="#">
@@ -62,22 +61,22 @@
                   </a>
                 </li>
                 <li class="p-[14px_24px] rounded-[8px] text-[18px] font-normal">
-                  <a href="#" class="text-[#262626]">
+                  <a href="./courses.html" class="text-[#262626]">
                     <span>Courses</span>
                   </a>
                 </li>
                 <li class="p-[14px_24px] rounded-[8px] text-[18px] font-normal">
-                  <a href="#" class="text-[#262626]">
+                  <a href="./courses-open.html" class="text-[#262626]">
                     <span>About Us</span>
                   </a>
                 </li>
                 <li class="p-[14px_24px] rounded-[8px] text-[18px] font-normal">
-                  <a href="#" class="text-[#262626]">
+                  <a href="./about.html" class="text-[#262626]">
                     <span>Pricing</span>
                   </a>
                 </li>
                 <li class="p-[14px_24px] rounded-[8px] text-[18px] font-normal">
-                  <a href="#" class="text-[#262626]">
+                  <a href="./pricing.html" class="text-[#262626]">
                     <span>Contact</span>
                   </a>
                 </li>
@@ -87,17 +86,20 @@
           </div>
 
           <div class="flex gap-[30px]">
-            <button
+            <a href="./login.html"
               class="border-transparent border cursor-pointer p-[14px_34px] rounded-[8px] text-[18px] font-normal bg-[#fff] active:scale-[0.99]">
               Sign Up
-            </button>
-            <button
+            </a>
+            <a href="./signup.html"
               class="border-transparent border cursor-pointer p-[14px_34px] rounded-[8px] text-[18px] font-normal bg-[#ff9500] text-[#fff] active:scale-[0.99]">
               Login
-            </button>
+            </a>
           </div>
+
         </div>
+
       </div>
     </header>
+    
   </body>
 </html>
