Added primitive footer and made changes to header container

--- a/Group-A/index.html
+++ b/Group-A/index.html
@@ -28,7 +28,7 @@
     />
     <title>Git-Group-A</title>
   </head>
-  <body class="font-vietnam h-[5000px]">
+  <body class="font-vietnam h-[2000px] bg-[#F7F7F8]">
     <div
     class="bg-[#ff9500] mt-[20px] p-[14px] flex gap-[23px] justify-center rounded-[8px] w-[calc(100%_-_60px)] mx-auto"
   >
@@ -40,9 +40,9 @@
     </a>
   </div>
     <header class="sticky top-0">
-      <div class="w-[calc(100%_-_60px)] mx-auto">
+      <div class="w-[calc(100%_-_324px)] mx-auto">
 
-        <div class="flex justify-between p-[20px_132px_24px] items-center">
+        <div class="flex justify-between p-[20px_0_24px_0] items-center">
           <div class="flex gap-[50px]">
             <div
               class="w-[47px] h-[47px] rounded-[8px] bg-[#ff9500] flex items-center justify-center mt-[4px]">
@@ -87,7 +87,7 @@
 
           <div class="flex gap-[30px]">
             <a href="./login.html"
-              class="border-transparent border cursor-pointer p-[14px_34px] rounded-[8px] text-[18px] font-normal bg-[#fff] active:scale-[0.99]">
+              class="border-transparent border cursor-pointer p-[14px_34px] rounded-[8px] text-[18px] font-normal active:scale-[0.99]">
               Sign Up
             </a>
             <a href="./signup.html"
@@ -100,6 +100,45 @@
 
       </div>
     </header>
-    
+
+    <footer class="bg-[#fff]">
+      <div class="w-[calc(100%_-_324px)] mx-auto p-[100px_0_30px_0] flex flex-col gap-[50px]">
+        <div class="top">
+          <div class="left">
+            <div
+              class="w-[47px] h-[47px] rounded-[8px] bg-[#ff9500] flex items-center justify-center mt-[4px] mb-[40px]">
+              <a href="#">
+                <img src="./assets/icons/logo.svg" alt="logo" />
+              </a>
+            </div>
+
+            <div class="text">
+              <div class="text-cont">
+                <img src="#" alt="">
+                <p>hello@skillbridge.com</p>
+              </div>
+              <div class="text-cont">
+                <img src="#" alt="">
+                <p>+91 91813 23 2309</p>
+              </div>
+              <div class="text-cont">
+                <img src="#" alt="">
+                <p>Somewhere in the World</p>
+              </div>
+            </div>
+
+          </div>
+
+          <div class="right">
+  
+          </div>
+        </div>
+        <div class="bg-[#F1F1F3] w-full h-[1px]"></div>
+        <div class="bot">
+
+        </div>
+
+      </div>
+    </footer>
   </body>
 </html>
