--- a/Group-A/index.html
+++ b/Group-A/index.html
@@ -28,10 +28,10 @@
     />
     <title>Git-Group-A</title>
   </head>
+
   <body class="font-vietnam h-[2000px] bg-[#F7F7F8]">
     <div
-    class="bg-[#ff9500] mt-[20px] p-[14px] flex gap-[23px] justify-center rounded-[8px] w-[calc(100%_-_60px)] mx-auto"
-  >
+    class="sale-wrapper bg-[#ff9500] mt-[20px] p-[14px] flex gap-[23px] justify-center rounded-[8px] w-[calc(100%_-_60px)] mx-auto">
     <span class="text-[#fff] text-[18px] font-normal"
       >Free Courses. Sale Ends Soon, Get It Now</span
     >
@@ -40,12 +40,12 @@
     </a>
   </div>
     <header class="sticky top-0">
-      <div class="w-[calc(100%_-_324px)] mx-auto">
+      <div class="mycontainer w-[calc(100%_-_324px)] mx-auto">
 
-        <div class="flex justify-between p-[20px_0_24px_0] items-center">
-          <div class="flex gap-[50px]">
+        <div class="header flex justify-between p-[20px_0_24px_0] items-center">
+          <div class="left-side flex gap-[50px]">
             <div
-              class="w-[47px] h-[47px] rounded-[8px] bg-[#ff9500] flex items-center justify-center mt-[4px]">
+              class="logo w-[47px] h-[47px] rounded-[8px] bg-[#ff9500] flex items-center justify-center mt-[4px]">
               <a href="#">
                 <img src="./assets/icons/logo.svg" alt="logo" />
               </a>
@@ -85,7 +85,7 @@
 
           </div>
 
-          <div class="flex gap-[30px]">
+          <div class="right-side flex gap-[30px]">
             <a href="./login.html"
               class="border-transparent border cursor-pointer p-[14px_34px] rounded-[8px] text-[18px] font-normal active:scale-[0.99]">
               Sign Up
@@ -102,40 +102,113 @@
     </header>
 
     <footer class="bg-[#fff]">
-      <div class="w-[calc(100%_-_324px)] mx-auto p-[100px_0_30px_0] flex flex-col gap-[50px]">
-        <div class="top">
-          <div class="left">
+      <div class="mycontainer w-[calc(100%_-_324px)] mx-auto p-[100px_0_30px_0] flex flex-col gap-[50px]">
+        <div class="top-side flex justify-between">
+          <div class="left-side flex flex-col gap-[40px]">
             <div
-              class="w-[47px] h-[47px] rounded-[8px] bg-[#ff9500] flex items-center justify-center mt-[4px] mb-[40px]">
+              class="logo w-[47px] h-[47px] rounded-[8px] bg-[#ff9500] flex items-center justify-center">
               <a href="#">
-                <img src="./assets/icons/logo.svg" alt="logo" />
+                <img src="./assets/icons/logo.svg" alt="logo"/>
               </a>
             </div>
 
-            <div class="text">
-              <div class="text-cont">
-                <img src="#" alt="">
-                <p>hello@skillbridge.com</p>
+            <div class="text-wrapper flex flex-col gap-[20px]">
+              <div class="wrapper">
+                <a href="#"  class="flex gap-[6px]">
+                  <img src="./assets/icons/footer-mail-icon.svg" alt="footer mail">
+                  <p class="text-[18px] text-[#262626] font-normal">hello@skillbridge.com</p>
+                </a>
               </div>
-              <div class="text-cont">
-                <img src="#" alt="">
-                <p>+91 91813 23 2309</p>
+              <div class="wrapper">
+                <a href="#"  class="flex gap-[6px]">
+                  <img src="./assets/icons/footer-phone-icon.svg" alt="footer phone">
+                  <p class="text-[18px] text-[#262626] font-normal">+91 91813 23 2309</p>
+                </a>
               </div>
-              <div class="text-cont">
-                <img src="#" alt="">
-                <p>Somewhere in the World</p>
+              <div class="wrapper">
+                <a href="#"  class="flex gap-[6px]">
+                  <img src="./assets/icons/footer-location-icon.svg" alt="footer location">
+                  <p class="text-[18px] text-[#262626] font-normal">Somewhere in the World</p>
+                </a>
               </div>
             </div>
 
           </div>
 
-          <div class="right">
-  
+          <div class="right-side flex gap-[30px]">
+            <div class="wrapper flex flex-col gap-[14px] w-[250px]">
+              <h4 class="text-[20px] font-semibold">Home</h4>
+              <ul class="flex flex-col gap-[8px] text-[18px] text-[#59595A] font-normal">
+                <li>
+                  <a href="#">
+                    <span>Benefits</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <span>Our Courses</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <span>Our Testimonials</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <span>Our FAQ</span>
+                  </a>
+                </li>
+              </ul>
+            </div>
+            <div class="wrapper flex flex-col gap-[14px] w-[250px]">
+              <h4 class="text-[20px] font-semibold">About Us</h4>
+              <ul class="flex flex-col gap-[8px] text-[18px] text-[#59595A] font-normal">
+                <li>
+                  <a href="#">
+                    <span>Company</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <span>Achievements</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <span>Our Goals</span>
+                  </a>
+                </li>
+              </ul>
+            </div>
+            <div class="wrapper flex flex-col gap-[14px] w-[250px]">
+              <h4 class="text-[20px] font-semibold">Social Profiles</h4>
+              <div class="social-wrapper flex gap-[14px]">
+                <a href="#">
+                  <div class="p-[14px] bg-[#F7F7F8] rounded-[8px]">
+                    <img src="./assets/icons/footer-fb-icon.svg" alt="facebook icon">
+                  </div>
+                </a>
+                <a href="#">
+                  <div class="p-[14px] bg-[#F7F7F8] rounded-[8px]">
+                    <img src="./assets/icons/footer-tw-icon.svg" alt="twitter icon">
+                  </div>
+                </a>
+                <a href="#">
+                  <div class="p-[14px] bg-[#F7F7F8] rounded-[8px]">
+                    <img src="./assets/icons/footer-linkedin-icon.svg" alt="linkedin icon">
+                  </div>
+                </a>
+              </div>
+
+            </div>
           </div>
         </div>
-        <div class="bg-[#F1F1F3] w-full h-[1px]"></div>
-        <div class="bot">
 
+        <div class="line bg-[#F1F1F3] w-full h-[1px]"></div>
+
+        <div class="bot-side text-center">
+          <span class="text-[18px] text-[#656567] font-normal">© 2023 Skillbridge. All rights reserved.</span>
         </div>
 
       </div>
