--- a/Group-A/index.html
+++ b/Group-A/index.html
@@ -66,17 +66,17 @@
                   </a>
                 </li>
                 <li class="p-[14px_24px] rounded-[8px] text-[18px] font-normal">
-                  <a href="./courses-open.html" class="text-[#262626]">
+                  <a href="./about.html" class="text-[#262626]">
                     <span>About Us</span>
                   </a>
                 </li>
                 <li class="p-[14px_24px] rounded-[8px] text-[18px] font-normal">
-                  <a href="./about.html" class="text-[#262626]">
+                  <a href="./pricing.html" class="text-[#262626]">
                     <span>Pricing</span>
                   </a>
                 </li>
                 <li class="p-[14px_24px] rounded-[8px] text-[18px] font-normal">
-                  <a href="./pricing.html" class="text-[#262626]">
+                  <a href="#" class="text-[#262626]">
                     <span>Contact</span>
                   </a>
                 </li>
