Another minor fix :/

--- a/Group-A/index.html
+++ b/Group-A/index.html
@@ -31,11 +31,11 @@
 
   <body class="font-vietnam h-[2000px] bg-[#F7F7F8]">
     <div
-    class="sale-wrapper bg-[#ff9500] mt-[20px] p-[14px] flex gap-[23px] justify-center rounded-[8px] w-[calc(100%_-_60px)] mx-auto">
+    class="sale-wrapper bg-[#ff9500] mt-[20px] p-[14px] rounded-[8px] w-[calc(100%_-_60px)] mx-auto">
+    <a href="#" class="flex gap-[23px] justify-center">
     <span class="text-[#fff] text-[18px] font-normal"
       >Free Courses. Sale Ends Soon, Get It Now</span
     >
-    <a href="#">
       <img src="./assets/icons/header-arrow.svg" alt="arrow icon" />
     </a>
   </div>
