--- a/Group-A/index.html
+++ b/Group-A/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <link rel="stylesheet" href="./index.css" /> -->
-    <!-- TailwindCDN -->
-    <script src="https://cdn.tailwindcss.com"></script>
-    <!-- TailwindConfig -->
+    <link rel="stylesheet" href="./index.css" />
+    <!-- <!-- TailwindCDN -->
+    <!-- <script src="https://cdn.tailwindcss.com"></script>  -->
+    <!-- TailwindConfig
     <script>
         tailwind.config = {
           theme: {
@@ -24,7 +24,7 @@
             },
           },
         };
-      </script>
+      </script> -->
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -35,54 +35,49 @@
     <title>Git-Group-A</title>
   </head>
 
-  <body class="font-vietnam h-[2000px] bg-[#F7F7F8]"> 
+  <body> 
     <div
-    class="sale-wrapper bg-[#ff9500] mt-[20px] p-[14px] rounded-[8px] xl:max-w-[1860px] md:p-[10px] md:max-w-[1400px] sm:max-w-[calc(100%_-_32px)] sm:p-[10px_16px] mx-auto">
-    <a href="#" class="flex md:gap-[23px] sm:gap-[12px] justify-center">
-    <span class="text-[#fff] lg:text-[18px] sm:text-[14px] font-normal"
-      >Free Courses. Sale Ends Soon, Get It Now</span
-    >
-      <img src="./assets/icons/header-arrow.svg" alt="arrow icon" />
+    class="sale-wrapper">
+    <a href="#">
+    <span>Free Courses. Sale Ends Soon, Get It Now</span>
+      <img src="./assets/icons/header-arrow.svg" alt="arrow icon"/>
     </a>
   </div>
-    <header class="sticky top-0 bg-[#F7F7F8]">
-      <div class="mycontainer xl:max-w-[1596px] md:max-w-[1280px] sm:max-w-[calc(100%_-_32px)] mx-auto">
+    <header>
+      <div class="container">
 
-        <div class="header flex justify-between p-[20px_0_24px_0] items-center">
-          <div class="left-side flex gap-[50px]">
-            <div
-              class="logo w-[47px] h-[47px] rounded-[8px] bg-[#ff9500] flex items-center justify-center mt-[4px]">
+        <div class="header">
+          <div class="left-side">
+            <div class="logo">
               <a href="#">
                 <img src="./assets/icons/logo.svg" alt="logo" />
               </a>
             </div>
 
-            <nav class="sm:hidden sm:p-[12px_20px]">
-              <ul class="flex items-center gap-[26px]">
-                <li
-                  class="bg-[#f1f1f3] xl:p-[14px_24px] md:p-[12px_20px] rounded-[8px] xl:text-[18px] md:text-[14px] font-normal"
-                >
-                  <a href="./index.html" class="text-[#262626]">
+            <nav>
+              <ul>
+                <li class="active">
+                  <a href="./index.html">
                     <span>Home</span>
                   </a>
                 </li>
-                <li class="xl:p-[14px_24px] md:p-[12px_20px] rounded-[8px] xl:text-[18px] md:text-[14px] font-normal">
-                  <a href="./courses.html" class="text-[#262626]">
+                <li>
+                  <a href="./courses.html">
                     <span>Courses</span>
                   </a>
                 </li>
-                <li class="xl:p-[14px_24px] md:p-[12px_20px] rounded-[8px] xl:text-[18px] md:text-[14px] font-normal">
-                  <a href="./about.html" class="text-[#262626]">
+                <li>
+                  <a href="./about.html">
                     <span>About Us</span>
                   </a>
                 </li>
-                <li class="xl:p-[14px_24px] md:p-[12px_20px] rounded-[8px] xl:text-[18px] md:text-[14px] font-normal">
-                  <a href="./pricing.html" class="text-[#262626]">
+                <li>
+                  <a href="./pricing.html">
                     <span>Pricing</span>
                   </a>
                 </li>
-                <li class="xl:p-[14px_24px] md:p-[12px_20px] rounded-[8px] xl:text-[18px] md:text-[14px] font-normal">
-                  <a href="#" class="text-[#262626]">
+                <li>
+                  <a href="#">
                     <span>Contact</span>
                   </a>
                 </li>
@@ -91,19 +86,17 @@
 
           </div>
 
-          <div class="right-side flex md:gap-[30px] sm:gap-[20px]">
-            <a href="./signup.html"
-              class="border-transparent border cursor-pointer xl:p-[14px_34px] md:p-[12px_24px] sm:p-[12px_20px] rounded-[8px] xl:text-[18px] md:text-[14px] font-normal active:scale-[0.99]">
+          <div class="right-side">
+            <a href="./signup.html">
               Sign Up
             </a>
-            <a href="./login.html"
-              class="border-transparent border cursor-pointer xl:p-[14px_34px] md:p-[12px_24px] sm:p-[12px_20px] rounded-[8px] xl:text-[18px] md:text-[14px] font-normal bg-[#ff9500] text-[#fff] active:scale-[0.99]">
+            <a href="./login.html">
               Login
             </a>
-            <div class="burger-menu flex flex-col gap-[5px]">
-                <div class="bar bg-[#000] w-[30px] h-[2px]"></div>
-                <div class="bar bg-[#000] w-[30px] h-[2px]"></div>
-                <div class="bar bg-[#000] w-[15px] h-[2px]"></div>
+            <div class="burger-menu">
+                <div class="bar"></div>
+                <div class="bar"></div>
+                <div class="bar"></div>
             </div>
           </div>
 
@@ -112,44 +105,43 @@
       </div>
     </header>
 
-    <footer class="bg-[#fff]">
-      <div class="mycontainer w-[calc(100%_-_324px)] mx-auto p-[100px_0_30px_0] flex flex-col gap-[50px]">
-        <div class="top-side flex justify-between">
-          <div class="left-side flex flex-col gap-[40px]">
-            <div
-              class="logo w-[47px] h-[47px] rounded-[8px] bg-[#ff9500] flex items-center justify-center">
+    <footer>
+      <div class="container">
+        <div class="top-side">
+          <div class="left-side">
+            <div class="logo">
               <a href="#">
                 <img src="./assets/icons/logo.svg" alt="logo"/>
               </a>
             </div>
 
-            <div class="text-wrapper flex flex-col gap-[20px]">
+            <div class="text-container">
               <div class="wrapper">
-                <a href="#"  class="flex gap-[6px]">
+                <a href="#">
                   <img src="./assets/icons/footer-mail-icon.svg" alt="footer mail">
-                  <p class="text-[18px] text-[#262626] font-normal">hello@skillbridge.com</p>
+                  <p>hello@skillbridge.com</p>
                 </a>
               </div>
               <div class="wrapper">
                 <a href="#"  class="flex gap-[6px]">
                   <img src="./assets/icons/footer-phone-icon.svg" alt="footer phone">
-                  <p class="text-[18px] text-[#262626] font-normal">+91 91813 23 2309</p>
+                  <p>+91 91813 23 2309</p>
                 </a>
               </div>
               <div class="wrapper">
-                <a href="#"  class="flex gap-[6px]">
+                <a href="#">
                   <img src="./assets/icons/footer-location-icon.svg" alt="footer location">
-                  <p class="text-[18px] text-[#262626] font-normal">Somewhere in the World</p>
+                  <p>Somewhere in the World</p>
                 </a>
               </div>
             </div>
 
           </div>
 
-          <div class="right-side flex gap-[30px]">
-            <div class="wrapper flex flex-col gap-[14px] w-[250px]">
-              <h4 class="text-[20px] font-semibold">Home</h4>
-              <ul class="flex flex-col gap-[8px] text-[18px] text-[#59595A] font-normal">
+          <div class="right-side">
+            <div class="wrapper">
+              <h4>Home</h4>
+              <ul>
                 <li>
                   <a href="#">
                     <span>Benefits</span>
@@ -172,9 +164,9 @@
                 </li>
               </ul>
             </div>
-            <div class="wrapper flex flex-col gap-[14px] w-[250px]">
-              <h4 class="text-[20px] font-semibold">About Us</h4>
-              <ul class="flex flex-col gap-[8px] text-[18px] text-[#59595A] font-normal">
+            <div class="wrapper">
+              <h4>About Us</h4>
+              <ul>
                 <li>
                   <a href="#">
                     <span>Company</span>
@@ -192,21 +184,21 @@
                 </li>
               </ul>
             </div>
-            <div class="wrapper flex flex-col gap-[14px] w-[250px]">
-              <h4 class="text-[20px] font-semibold">Social Profiles</h4>
-              <div class="social-wrapper flex gap-[14px]">
+            <div class="wrapper">
+              <h4>Social Profiles</h4>
+              <div class="social-wrapper">
                 <a href="#">
-                  <div class="p-[14px] bg-[#F7F7F8] rounded-[8px]">
+                  <div>
                     <img src="./assets/icons/footer-fb-icon.svg" alt="facebook icon">
                   </div>
                 </a>
                 <a href="#">
-                  <div class="p-[14px] bg-[#F7F7F8] rounded-[8px]">
+                  <div>
                     <img src="./assets/icons/footer-tw-icon.svg" alt="twitter icon">
                   </div>
                 </a>
                 <a href="#">
-                  <div class="p-[14px] bg-[#F7F7F8] rounded-[8px]">
+                  <div>
                     <img src="./assets/icons/footer-linkedin-icon.svg" alt="linkedin icon">
                   </div>
                 </a>
@@ -216,10 +208,10 @@
           </div>
         </div>
 
-        <div class="line bg-[#F1F1F3] w-full h-[1px]"></div>
+        <div class="line"></div>
 
-        <div class="bot-side text-center">
-          <span class="text-[18px] text-[#656567] font-normal">© 2023 Skillbridge. All rights reserved.</span>
+        <div class="bottom-side">
+          <span>© 2023 Skillbridge. All rights reserved.</span>
         </div>
 
       </div>
