--- a/Group-A/login.html
+++ b/Group-A/login.html
@@ -106,7 +106,51 @@
     </header>
 
 <main>
-    
+   <div class="container">
+    <div class="sub-container">
+      <div class="left-side">
+        <div class="top">
+          <h3>Students Testimonials</h3>
+          <p>Lorem ipsum dolor sit amet consectetur. Tempus tincidunt etiam eget elit id imperdiet et. Cras
+            <br> eu sit dignissim lorem nibh et. Ac cum eget habitasse in velit fringilla feugiat senectus in.</p>
+        </div>
+       <div class="bottom">
+        <p></p>
+        <div class="user">
+          <p>The web design course provided a solid foundation for me. The instructors were knowledgeable and supportive, and the interactive learning environment was engaging. I highly recommend it!</p>
+          <img src="./assets/images/Image.png" alt="">
+          <p>Sarah L</p>
+          <button>Read More</button>
+        </div>
+
+       </div>
+      </div>
+
+      <div class="right-side">
+        <div class="login">
+          <div class="login-info">
+            <h1>Login</h1>
+          <p>Welcome back! Please log in to access your account.</p>
+          </div>
+          <div class="input-box">
+            <h5>Email</h5>
+            <input type="text" placeholder="Enter your Email">
+            <h5>Password</h5>
+            <input type="text" placeholder="Enter your Password">
+            <p class="Password">Forgot Password?</p>
+            <p>Remember Me</p>
+            <button class="buton1">Login</button>
+            <button class="buton2">
+              <img src="./assets/icons/Icon.svg" alt="">
+              Login with Google
+              
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+   </div>
+
 </main>
 
     <footer>
